add swagger documentation for articlesControllers actions
